# training-llm-application-development-starter

./: .env.template  .gitignore  Makefile  README.md  app.py  pyproject.toml
app/agent_design_pattern/role_based_cooperation/: main.py
app/agent_design_pattern/self_reflection/: main.py
app/agent_design_pattern/single_path_plan_generation/: main.py
app/rag/: factory.py
app/rag/chains/: naive.py
docs/: aws_cloud9.md  ec2_code_server.md  ec2_code_server.yaml  windows_wsl2.md
notebooks/: hello.ipynb
