[project]
name = "training-llm-application-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-chroma==0.1.4",
    "langchain-cohere==0.3.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "langchain-text-splitters==0.3.0",
    "langgraph==0.2.22",
    "nltk==3.9.1",
    "openai==1.40.6",
    "python-dotenv==1.0.1",
    "ragas==0.2.5",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.10.1",
    "streamlit-feedback==0.1.3",
    "streamlit==1.38.0",
    "tavily-python==0.5.0",
]

[tool.uv]
dev-dependencies = ["jupyter==1.1.1"]
