[project]
name = "training-llm-application-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "decorator==5.1.1",
    "faiss-cpu==1.9.0",
    "langchain-chroma==0.2.0",
    "langchain-cohere==0.3.4",
    "langchain-community==0.3.14",
    "langchain-core==0.3.29",
    "langchain-openai==0.3.0",
    "langchain-text-splitters==0.3.5",
    "langgraph==0.2.62",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "openai==1.59.7",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "ragas==0.2.11",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.11.0",
    "retry==0.9.2",
    "streamlit-feedback==0.1.4",
    "streamlit==1.41.1",
    "tavily-python==0.5.0",
]

[tool.uv]
dev-dependencies = ["jupyter==1.1.1"]
